--- a/config
+++ b/config
@@ -3322,7 +3322,7 @@ CONFIG_XFS_RT=y
 # CONFIG_XFS_DEBUG is not set
 # CONFIG_GFS2_FS is not set
 # CONFIG_OCFS2_FS is not set
-CONFIG_BTRFS_FS=y
+CONFIG_BTRFS_FS=m
 CONFIG_BTRFS_FS_POSIX_ACL=y
 # CONFIG_BTRFS_FS_CHECK_INTEGRITY is not set
 # CONFIG_BTRFS_FS_RUN_SANITY_TESTS is not set
@@ -3760,7 +3760,7 @@ CONFIG_SECURITY_PATH=y
 # CONFIG_INTEGRITY is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_DEFAULT_SECURITY=""
-CONFIG_XOR_BLOCKS=y
+CONFIG_XOR_BLOCKS=m
 CONFIG_ASYNC_CORE=m
 CONFIG_ASYNC_MEMCPY=m
 CONFIG_ASYNC_XOR=m
@@ -3978,7 +3978,7 @@ CONFIG_BINARY_PRINTF=y
 #
 # RAID 6
 #
-CONFIG_RAID6_PQ=y
+CONFIG_RAID6_PQ=m
 CONFIG_RAID6_FORCE_ALGO=y
 # CONFIG_RAID6_FORCE_INT is not set
 # CONFIG_RAID6_FORCE_SSSE3 is not set
