config: updated by make oldconfig

--- a/config
+++ b/config
@@ -3331,23 +3331,6 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_RAM=m
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_AUFS_FS=m
-CONFIG_AUFS_BRANCH_MAX_127=y
-# CONFIG_AUFS_BRANCH_MAX_511 is not set
-# CONFIG_AUFS_BRANCH_MAX_1023 is not set
-# CONFIG_AUFS_BRANCH_MAX_32767 is not set
-CONFIG_AUFS_SBILIST=y
-CONFIG_AUFS_HNOTIFY=y
-CONFIG_AUFS_HFSNOTIFY=y
-# CONFIG_AUFS_EXPORT is not set
-CONFIG_AUFS_XATTR=y
-# CONFIG_AUFS_FHSM is not set
-CONFIG_AUFS_RDU=y
-# CONFIG_AUFS_SHWH is not set
-# CONFIG_AUFS_BR_RAMFS is not set
-# CONFIG_AUFS_BR_FUSE is not set
-CONFIG_AUFS_BDEV_LOOP=y
-# CONFIG_AUFS_DEBUG is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=m
 CONFIG_NFS_V2=m
@@ -3903,7 +3886,15 @@ CONFIG_BINARY_PRINTF=y
 #
 # Library routines
 #
+
+#
+# RAID 6
+#
 CONFIG_RAID6_PQ=m
+CONFIG_RAID6_FORCE_ALGO=y
+# CONFIG_RAID6_FORCE_INT is not set
+# CONFIG_RAID6_FORCE_SSSE3 is not set
+CONFIG_RAID6_FORCE_AVX2=y
 CONFIG_BITREVERSE=y
 # CONFIG_HAVE_ARCH_BITREVERSE is not set
 CONFIG_RATIONAL=y
@@ -3993,7 +3984,3 @@ CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_ARCH_HAS_PMEM_API=y
 CONFIG_ARCH_HAS_MMIO_FLUSH=y
-CONFIG_RAID6_FORCE_ALGO=y
-# CONFIG_RAID6_FORCE_INT is not set
-# CONFIG_RAID6_FORCE_SSSE3 is not set
-CONFIG_RAID6_FORCE_AVX2=y
